// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagsController (e2e) /tags/:id/details (GET) returns requested tag 1`] = `
Object {
  "category": "characters",
  "id": 15018,
  "name": "voluptatem",
  "tagged": 45954,
  "uri": "https://well-worn-soprano.info",
}
`;

exports[`TagsController (e2e) /tags/list/:category (GET) converts parameters types 1`] = `
Object {
  "data": Array [
    Object {
      "category": "artists",
      "id": 39054,
      "name": "debitis",
      "tagged": 86502,
      "uri": "https://svelte-bit.net",
    },
  ],
  "pagination": Object {
    "page": 1,
    "total": 22,
  },
}
`;

exports[`TagsController (e2e) /tags/list/:category (GET) converts parameters types 2`] = `
Object {
  "data": Array [
    Object {
      "category": "artists",
      "id": 39054,
      "name": "debitis",
      "tagged": 86502,
      "uri": "https://svelte-bit.net",
    },
  ],
  "pagination": Object {
    "page": 1,
    "total": 22,
  },
}
`;

exports[`TagsController (e2e) /tags/list/:category (GET) converts parameters types 3`] = `
Object {
  "data": Array [
    Object {
      "category": "artists",
      "id": 39054,
      "name": "debitis",
      "tagged": 86502,
      "uri": "https://svelte-bit.net",
    },
  ],
  "pagination": Object {
    "page": 1,
    "total": 22,
  },
}
`;

exports[`TagsController (e2e) /tags/list/:category (GET) converts parameters types 4`] = `
Object {
  "data": Array [
    Object {
      "category": "artists",
      "id": 39054,
      "name": "debitis",
      "tagged": 86502,
      "uri": "https://svelte-bit.net",
    },
  ],
  "pagination": Object {
    "page": 1,
    "total": 22,
  },
}
`;

exports[`TagsController (e2e) /tags/list/:category (GET) converts parameters types 5`] = `
Object {
  "data": Array [
    Object {
      "category": "artists",
      "id": 39054,
      "name": "debitis",
      "tagged": 86502,
      "uri": "https://svelte-bit.net",
    },
  ],
  "pagination": Object {
    "page": 1,
    "total": 22,
  },
}
`;

exports[`TagsController (e2e) /tags/list/:category (GET) sort by name 1`] = `
Object {
  "data": Array [
    Object {
      "category": "artists",
      "id": 39054,
      "name": "debitis",
      "tagged": 86502,
      "uri": "https://svelte-bit.net",
    },
  ],
  "pagination": Object {
    "page": 1,
    "total": 22,
  },
}
`;

exports[`TagsController (e2e) /tags/list/:category (GET) sort by popularity 1`] = `
Object {
  "data": Array [
    Object {
      "category": "artists",
      "id": 39054,
      "name": "debitis",
      "tagged": 86502,
      "uri": "https://svelte-bit.net",
    },
  ],
  "pagination": Object {
    "page": 1,
    "total": 22,
  },
}
`;

exports[`TagsController (e2e) /tags/list/:category/:letter (GET) is case insensitive 1`] = `
Array [
  Object {
    "category": "artists",
    "id": 828844,
    "name": "autem",
    "tagged": 25470,
    "uri": "https://boiling-obesity.com",
  },
]
`;

exports[`TagsController (e2e) /tags/list/:category/:letter (GET) is case insensitive 2`] = `
Array [
  Object {
    "category": "artists",
    "id": 828844,
    "name": "autem",
    "tagged": 25470,
    "uri": "https://boiling-obesity.com",
  },
]
`;

exports[`TagsController (e2e) /tags/list/:category/:letter (GET) returns all tags starting with specified letter, sorted by name 1`] = `
Array [
  Object {
    "category": "artists",
    "id": 828844,
    "name": "autem",
    "tagged": 25470,
    "uri": "https://boiling-obesity.com",
  },
]
`;

exports[`TagsController (e2e) /tags/search (GET) returns tags including search query 1`] = `
Array [
  Object {
    "category": "tags",
    "id": 184010,
    "name": "ipsam",
    "tagged": 23526,
    "uri": "https://stupid-mortgage.name",
  },
  Object {
    "category": "parodies",
    "id": 421107,
    "name": "ipsum",
    "tagged": 5924,
    "uri": "https://querulous-bottom-line.name",
  },
]
`;

exports[`TagsController (e2e) /tags/search (GET) returns tags including search query and category 1`] = `
Array [
  Object {
    "category": "tags",
    "id": 184010,
    "name": "ipsam",
    "tagged": 23526,
    "uri": "https://stupid-mortgage.name",
  },
]
`;
